@@ -185,12 +185,12 @@ PHP_METHOD(IntlDateFormatter, parseToCalendar)
 	DATE_FORMAT_METHOD_FETCH_OBJECT;
 
 	if (z_parse_pos) {
-		zend_long long_parse_pos;
-		ZVAL_DEREF(z_parse_pos);
+		zval *z_parse_pos_tmp = z_parse_pos;
+		ZVAL_DEREF(z_parse_pos_tmp);
 		bool failed = false;
-		long_parse_pos = zval_try_get_long(z_parse_pos, &failed);
+		zend_long long_parse_pos = zval_try_get_long(z_parse_pos_tmp, &failed);
 		if (failed) {
-			zend_argument_type_error(2, "must be of type int, %s given", zend_zval_value_name(z_parse_pos));
+			zend_argument_type_error(2, "must be of type int, %s given", zend_zval_value_name(z_parse_pos_tmp));
 			RETURN_THROWS();
 		}
 		if (ZEND_LONG_INT_OVFL(long_parse_pos)) {
@@ -205,8 +205,7 @@ PHP_METHOD(IntlDateFormatter, parseToCalendar)
 	}
 	internal_parse_to_timestamp( dfo, ZSTR_VAL(text_to_parse), ZSTR_LEN(text_to_parse), z_parse_pos ? &parse_pos : NULL, true, return_value);
 	if (z_parse_pos) {
-		zval_ptr_dtor(z_parse_pos);
-		ZVAL_LONG(z_parse_pos, parse_pos);
+		ZEND_TRY_ASSIGN_REF_LONG(z_parse_pos, parse_pos);
 	}
 }
 
